[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/home/label_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/home/buttons_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://arts/backgrounds/ButtonBackg.png" type="Texture" id=3]
[ext_resource path="res://scenes/home/home.gd" type="Script" id=4]
[ext_resource path="res://arts/ui/material-symbols_settings.png" type="Texture" id=5]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="bckground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="spacer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 375.0
margin_bottom = 206.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 375.0
margin_bottom = 234.0
custom_colors/font_color = Color( 0.286275, 0.427451, 0.376471, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Your Team"
align = 1

[node name="sizeSpace" type="CenterContainer" parent="VBoxContainer"]
margin_top = 238.0
margin_right = 375.0
margin_bottom = 248.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 252.0
margin_right = 375.0
margin_bottom = 285.0
size_flags_horizontal = 3

[node name="spacer3" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 72.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="blue_btn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 76.0
margin_right = 188.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
action_mode = 0
text = "Blue Team"
flat = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/blue_btn"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0.458824, 1, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/blue_btn/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Blue Team"
align = 1
valign = 1

[node name="red_btn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 298.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
action_mode = 0
text = "Red Team"
flat = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/red_btn"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 0, 0, 1 )

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/red_btn/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Red Team"
align = 1
valign = 1

[node name="spacer4" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 302.0
margin_right = 375.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="sizeSpace2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 289.0
margin_right = 375.0
margin_bottom = 299.0
rect_min_size = Vector2( 0, 10 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 303.0
margin_right = 375.0
margin_bottom = 357.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CenterContainer"]
margin_left = 95.0
margin_right = 279.0
margin_bottom = 54.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="play" type="Button" parent="VBoxContainer/CenterContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "Play"
flat = true

[node name="spacer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 361.0
margin_right = 375.0
margin_bottom = 567.0
size_flags_vertical = 3

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 571.0
margin_right = 375.0
margin_bottom = 601.0

[node name="settings" type="Button" parent="VBoxContainer/CenterContainer2"]
margin_left = 169.0
margin_right = 205.0
margin_bottom = 30.0
action_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="spacer3" type="CenterContainer" parent="VBoxContainer"]
margin_top = 605.0
margin_right = 375.0
margin_bottom = 812.0
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/blue_btn" to="." method="_on_blue_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/red_btn" to="." method="_on_red_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/TextureRect/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/settings" to="." method="_on_settings_pressed"]
